--- a/WebContent/styles/default.css
+++ b/WebContent/styles/default.css
@@ -1,1 +1,20 @@
-@charset "ISO-8859-1";
+table.voorstellingen {
+	border-collapse: collapse;
+}
+
+tbody tr td{
+	padding-left: 3px;
+	padding-right: 3px;
+}
+
+tbody.zebra tr:nth-child(odd) {
+	background-color: #e6e3e6;
+}
+
+tbody.zebra tr:nth-child(even) {
+	background-color: white;
+}
+
+td.vrijeplaatsen {
+	text-align: right;
+}
