--- a/WebContent/styles/default.css
+++ b/WebContent/styles/default.css
@@ -18,3 +18,13 @@ tbody.zebra tr:nth-child(even) {
 td.vrijeplaatsen {
 	text-align: right;
 }
+
+dd.attribuut {
+	font-weight: bold;
+	margin-left: 0;
+	margin-bottom: 1em;
+}
+
+input[type=number]{
+    width: 45px;
+} 
